--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: 38.68.134.191, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-305.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.53MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-2.57MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 38.68.134.191, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: 38.68.134.191, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-1.65MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.50MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.35MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.38MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-3.22MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
