--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.29MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: xiexi.tk, port: 2096, type: vmess, uuid: 37551ca0-8cc3-432f-ca1f-82aba1db3ef9, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: xiexi.tk}}
+  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇮🇹 意大利-848.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-1.58MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇨🇦 加拿大-363.8KB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.35MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
