--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇮🇹 意大利-848.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇫🇷 法国-579.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-897.1KB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇩🇪 德国-1.60MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-968.0KB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇦 加拿大-363.8KB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-848.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
