--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-579.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇩🇪 德国-897.1KB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇩🇪 德国-1.60MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-968.0KB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 未知国家-2.11MB/s(Youtube:不良林), server: xiexi.tk, port: 2096, type: vmess, uuid: 37551ca0-8cc3-432f-ca1f-82aba1db3ef9, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: xiexi.tk}}
+  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 38.68.134.191, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇩🇪 德国-1.41MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-152.9KB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-363.8KB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-2.71MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-579.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-897.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.0KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-363.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
